[package]
name = "oci-meta-github"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
lazy_static = "1.4.0"
regex = "1.5.4"
semver = { git = "https://github.com/ludovic-muller/semver", rev = "38caeeecd32fd020379c53b9a0eab68276c5cfcc" }
